--- a/options/train_realesrnet_motion01.yml
+++ b/options/train_realesrnet_motion01.yml
@@ -20,8 +20,9 @@ stretch_range: [0.8, 1.2] # 期望概率分布符合正态分布
 
 
 
-# resize_prob: [0.2, 0.7, 0.1]  # up, down, keep
-# resize_range: [0.15, 1.5]
+# the first degradation process
+resize_prob: [0.2, 0.7, 0.1]  # up, down, keep
+resize_range: [0.15, 1.5]
 gaussian_noise_prob: 0.5
 noise_range: [1, 30]
 poisson_scale_range: [0.05, 3]
