--- a/options/train_realesrnet_motion01.yml
+++ b/options/train_realesrnet_motion01.yml
@@ -9,9 +9,10 @@ gt_usm: True  # USM the ground-truth
 
 # Motion process
 rot90_prob: 0.5 # 旋转90度概率
-undersample_prob: 1.0 # 降采样概率
-center_fraction_range: [0.02, 0.04] # 中心部分采样范围
-acceleration_range: [2, 6] # 加速范围
+horizontal_mask_prob: 0.5
+undersample_prob: 0.5 # 降采样概率
+center_fraction_range: [0.02, 0.08] # 中心部分采样范围
+acceleration_range: [2, 8] # 加速范围
 rounds_range: [3,11] # 运动阶段数
 rotate_prob: 0.5 # 旋转概率
 rotate_range: [-5, 5] # 旋转角度范围
