--- a/options/test_realesrnet_motion02.yml
+++ b/options/test_realesrnet_motion02.yml
@@ -1,4 +1,4 @@
-name: degeneration
+name: RealESRNET_motion01_test
 model_type: RealESRNetModel
 scale: 1
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -52,7 +52,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: /kaggle/input/test0224/degeneration.pth
+  pretrain_network_g: /kaggle/input/motion01/net_g_latest.pth
   strict_load_g: true
 
 # validation settings
