--- a/options/test_realesrnet_motion03.yml
+++ b/options/test_realesrnet_motion03.yml
@@ -1,4 +1,4 @@
-name: degeneration
+name: mo_un
 model_type: RealESRNetModel
 scale: 1
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -9,7 +9,7 @@ datasets:
     name: inter-scan_motion90
     type: PairedImageDataset
     dataroot_gt: datasets/motion01/m4raw/inter-scan_motion90
-    dataroot_lq: datasets/motion01/m4raw/inter-scan_motion90
+    dataroot_lq: datasets\motion01/m4raw/inter-scan_motion90
     io_backend:
       type: disk
   test_2:  # the 2nd test dataset
@@ -52,7 +52,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: /kaggle/input/test0224/degeneration.pth
+  pretrain_network_g: /kaggle/input/test0224/mo_un.pth
   strict_load_g: true
 
 # validation settings
