--- a/options/test_realesrnet_motion04.yml
+++ b/options/test_realesrnet_motion04.yml
@@ -1,4 +1,4 @@
-name: mo_un_no
+name: mo_un_no_de
 model_type: RealESRNetModel
 scale: 1
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -52,7 +52,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: /kaggle/input/test0224/mo_un_no.pth
+  pretrain_network_g: /kaggle/input/test0224/mo_un_no_de.pth
   strict_load_g: true
 
 # validation settings
