--- a/options/test_realesrnet_motion06.yml
+++ b/options/test_realesrnet_motion06.yml
@@ -8,38 +8,11 @@ datasets:
   test_1:  # the 1st test dataset
     name: inter-scan_motion90
     type: PairedImageDataset
-    dataroot_gt: datasets/motion01/m4raw/inter-scan_motion90
-    dataroot_lq: datasets/motion01/m4raw/inter-scan_motion90
+    dataroot_gt: datasets/motion01/rot90
+    dataroot_lq: datasets/motion01/rot90
     io_backend:
       type: disk
-  test_2:  # the 2nd test dataset
-    name: inter-scan_motion_under90
-    type: PairedImageDataset
-    dataroot_gt: datasets/motion01/m4raw/inter-scan_motion_under90
-    dataroot_lq: datasets/motion01/m4raw/inter-scan_motion_under90
-    io_backend:
-      type: disk
-  test_3:
-    name: intra-scan_motion90
-    type: PairedImageDataset
-    dataroot_gt: datasets/motion01/m4raw/intra-scan_motion90
-    dataroot_lq: datasets/motion01/m4raw/intra-scan_motion90
-    io_backend:
-      type: disk
-  test_4:
-    name: intra-scan_motion_under90
-    type: PairedImageDataset
-    dataroot_gt: datasets/motion01/m4raw/intra-scan_motion_under90
-    dataroot_lq: datasets/motion01/m4raw/intra-scan_motion_under90
-    io_backend:
-      type: disk
-  test_5:
-    name: real_motion02_under
-    type: PairedImageDataset
-    dataroot_gt: datasets/motion01/real_motion/run02_under
-    dataroot_lq: datasets/motion01/real_motion/run02_under
-    io_backend:
-      type: disk
+
 # network structures
 network_g:
   type: RRDBNet
