--- a/options/X0226_realesrnet_motion02_undersample_abd.yml
+++ b/options/X0226_realesrnet_motion02_undersample_abd.yml
@@ -12,7 +12,7 @@ equal_mask: True
 rician_noise_prob: 0.0
 rician_noise_range: [0.0001, 0.0002]
 rot90_prob: 1.0 # 旋转90度概率
-horizontal_mask_prob: 1.0
+horizontal_mask_prob: 0.0
 undersample_prob: 0.9 # 降采样概率
 center_fraction_range: [0.05, 0.15] # 中心部分采样范围
 acceleration_range: [2, 5] # 加速范围
@@ -90,10 +90,10 @@ datasets:
 
   # Uncomment these for validation
   val:
-    name: rot90
+    name: abd_sub_pad
     type: PairedImageDataset
-    dataroot_gt: datasets/motion01/rot90
-    dataroot_lq: datasets/motion01/rot90
+    dataroot_gt: datasets/motion01/abd_sub_pad
+    dataroot_lq: datasets/motion01/abd_sub_pad
     io_backend:
       type: disk
 
@@ -142,7 +142,7 @@ train:
 # validation settings
 val:
   val_freq: !!float 2e4
-  save_img: False
+  save_img: True
 
   metrics:
     psnr: # metric name
@@ -153,7 +153,7 @@ val:
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
