--- a/options/X0226_realesrnet_motion02_noise.yml
+++ b/options/X0226_realesrnet_motion02_noise.yml
@@ -1,5 +1,5 @@
 # general settings
-name: X0226_realesrnet_motion02_un_motion_abd
+name: X0226_realesrnet_motion02_noise
 model_type: RealESRNetModel
 scale: 1
 num_gpu: auto  # auto: can infer from your visible devices automatically. official: 4 GPUs
@@ -8,23 +8,23 @@ manual_seed: 0
 gt_usm: True  # USM the ground-truth
 
 # Motion process
-equal_mask: True
-rician_noise_prob: 0.0
-rician_noise_range: [0.0001, 0.0002]
+equal_mask: False
+rician_noise_prob: 0.8
+rician_noise_range: [0.005, 0.05]
 rot90_prob: 0.0 # 旋转90度概率
 horizontal_mask_prob: 0.0
-undersample_prob: 0.9 # 降采样概率
+undersample_prob: 0.0 # 降采样概率
 center_fraction_range: [0.05, 0.15] # 中心部分采样范围
 acceleration_range: [2, 5] # 加速范围
-rounds_range: [3,7] # 运动阶段数
-rotate_prob: 0.7 # 旋转概率
-rotate_range: [-15, 15] # 旋转角度范围
-translation_prob: [0.3, 0.4, 0.3] # un-down, left-right, keep
-translation_range: [-0.1, 0.1]  # 平移范围
-perspective_prob: [0.3, 0.4, 0.3]  # un-down, left-right, keep
-perspective_range: [-0.1, 0.1] # 透视范围
-stretch_prob: 0.7 # 伸缩概率
-stretch_range: [-0.05, 0.05] # 伸缩范围
+rounds_range: [0,2] # 运动阶段数
+rotate_prob: 0.0 # 旋转概率
+rotate_range: [-0.1, 0.1] # 旋转角度范围
+translation_prob: [0.0, 0.0, 1.0] # un-down, left-right, keep
+translation_range: [-0.001, 0.001]  # 平移范围
+perspective_prob: [0.0, 0.0, 1.0]  # un-down, left-right, keep
+perspective_range: [-0.001, 0.001] # 透视范围
+stretch_prob: 0.0 # 伸缩概率
+stretch_range: [-0.001, 0.001] # 伸缩范围
 
 # the first degradation process
 resize_prob: [0.1, 0.1, 0.8]  # up, down, keep
