--- a/options/C0226_realesrnet_motion02_noise_A1.yml
+++ b/options/C0226_realesrnet_motion02_noise_A1.yml
@@ -1,4 +1,4 @@
-name: C0226_realesrnet_motion02_noise_2
+name: C0226_realesrnet_motion02_noise_A1
 model_type: RealESRNetModel
 scale: 1
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -6,10 +6,10 @@ manual_seed: 0
 
 datasets:
   test_1:  # the 1st test dataset
-    name: brain_test_under_motion_noise
+    name: brain_test_under_noise
     type: PairedImageDataset
-    dataroot_gt: /kaggle/working/Real-Motion-01/results/C0226_realesrnet_motion02_motion_1/visualization/brain_test_under_noise
-    dataroot_lq: /kaggle/working/Real-Motion-01/results/C0226_realesrnet_motion02_motion_1/visualization/brain_test_under_noise
+    dataroot_gt: /kaggle/working/Real-Motion-01/datasets/motion01/brain_test_under
+    dataroot_lq: /kaggle/working/Real-Motion-01/datasets/motion01/brain_test_under
     io_backend:
       type: disk
 
