--- a/options/C0229_realesrnet_motion02_un30_mo30_no30.yml
+++ b/options/C0229_realesrnet_motion02_un30_mo30_no30.yml
@@ -53,6 +53,14 @@ datasets:
     io_backend:
       type: disk
 
+  test_7:  # the 7th test dataset
+    name: rot90
+    type: PairedImageDataset
+    dataroot_gt: datasets/motion01/rot90
+    dataroot_lq: datasets/motion01/rot90
+    io_backend:
+      type: disk
+
 # network structures
 network_g:
   type: RRDBNet
