--- a/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
+++ b/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
@@ -138,7 +138,7 @@ train:
     #reduction: mean
 
   perceptual_opt:
-    type: FFTLoss
+    type: FocalFrequencyLoss
     loss_weight: 1.0
     reduction: mean
 
