--- a/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
+++ b/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
@@ -137,7 +137,7 @@ train:
     #loss_weight: 1.0
     #reduction: mean
 
-  perceptual_opt:
+  pixel_opt:
     type: FocalFrequencyLoss
     loss_weight: 1.0
 
