--- a/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
+++ b/options/X0302_realesrnet_motion02_undersample_fflcopy.yml
@@ -132,10 +132,10 @@ train:
   warmup_iter: -1  # no warm up
 
   # losses
-  pixel_opt:
-    type: L1Loss
-    loss_weight: 1.0
-    reduction: mean
+  #pixel_opt:
+  #  type: L1Loss
+  #  loss_weight: 1.0
+  #  reduction: mean
 
   fft_opt:
     type: FFTLoss
