--- a/options/X0303_realesrnet_motion02_undersample_ffl.yml
+++ b/options/X0303_realesrnet_motion02_undersample_ffl.yml
@@ -1,5 +1,5 @@
 # general settings
-name: X0302_realesrnet_motion02_undersample_ffl
+name: X0303_realesrnet_motion02_undersample_ffl
 model_type: RealESRNetModel
 scale: 1
 num_gpu: auto  # auto: can infer from your visible devices automatically. official: 4 GPUs
@@ -12,9 +12,9 @@ rician_noise_prob: 0.0
 rician_noise_range: [0.0001, 0.0002]
 rot90_prob: 1.0 # 旋转90度概率
 horizontal_mask_prob: 0.0
-undersample_prob: 0.8 # 降采样概率
+undersample_prob: 1.0 # 降采样概率
 center_fraction_range: [0.05, 0.15] # 中心部分采样范围
-acceleration_range: [2, 5] # 加速范围
+acceleration_range: [2, 6] # 加速范围
 rounds_range: [1,3] # 运动阶段数
 rotate_prob: 0.0 # 旋转概率
 rotate_range: [-0.1, 0.1] # 旋转角度范围
@@ -83,7 +83,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 5
-    batch_size_per_gpu: 15
+    batch_size_per_gpu: 16
     dataset_enlarge_ratio: 100
     prefetch_mode: ~
 
@@ -132,12 +132,7 @@ train:
   warmup_iter: -1  # no warm up
 
   # losses
-  pixel_opt:
-    type: L1Loss
-    loss_weight: 1.0
-    reduction: mean
-
-  FFT_opt:
+  fft_opt:
     type: FFTLoss
     loss_weight: 1.0
     reduction: mean
@@ -145,8 +140,8 @@ train:
 # Uncomment these for validation
 # validation settings
 val:
-  val_freq: !!float 2e4
-  save_img: False
+  val_freq: !!float 1e4
+  save_img: True
 
   metrics:
     psnr: # metric name
