--- a/options/X0318_realesrnet_motion03_under_motion.yml
+++ b/options/X0318_realesrnet_motion03_under_motion.yml
@@ -8,6 +8,7 @@ manual_seed: 0
 gt_usm: True  # USM the ground-truth
 
 # Motion process
+low_freq : True
 rician_noise_prob: 0.0
 rician_noise_range: [0.0001, 0.0002]
 rot90_prob: 1.0 # 旋转90度概率
@@ -99,7 +100,7 @@ datasets:
 # network structures
 network_g:
   type: RRDBNet
-  num_in_ch: 1
+  num_in_ch: 2
   num_out_ch: 1
   num_feat: 64
   num_block: 23
@@ -125,7 +126,7 @@ train:
 
   scheduler:
     type: MultiStepLR
-    milestones: [30000]
+    milestones: [40000]
     gamma: 0.5
 
   total_iter: 30000
