--- a/options/X0319_realesrnet_motion03_under_motion_1ch.yml
+++ b/options/X0319_realesrnet_motion03_under_motion_1ch.yml
@@ -97,7 +97,7 @@ datasets:
     io_backend:
       type: disk
 
-  val2:
+  val_2:
     name: run
     type: PairedImageDataset
     dataroot_gt: datasets/motion02/run01
