--- a/options/X0319_realesrnet_motion03_under_motion_1ch.yml
+++ b/options/X0319_realesrnet_motion03_under_motion_1ch.yml
@@ -18,8 +18,8 @@ rot90_prob: 1.0 # 旋转90度概率
 horizontal_mask_prob: 0.0
 undersample_prob: 1.0 # 降采样概率
 center_fraction_range: [0.05, 0.15] # 中心部分采样范围
-acceleration_range: [3, 5] # 加速范围
-rounds_range: [51,251] # 运动阶段数
+acceleration_range: [4, 4] # 加速范围
+#rounds_range: [51,251] # 运动阶段数
 rotate_prob: 0.5 # 旋转概率
 rotate_range: [-2, 2] # 旋转角度范围
 translation_prob: [0.2, 0.2, 0.6] # un-down, left-right, keep
